# vima.smart_emails

./: .gitignore  Dockerfile  Makefile  README.md  docker-entry.sh  pyproject.toml  setup.py
foundation.emails/: package-lock.json  package.json
foundation.emails/src/assets/scss/template/: _template.scss
foundation.emails/src/layouts/: default.html  index-layout.html
foundation.emails/src/pages/: index.html  smart-notification-template.html  smart-notification_sda_21_08_2018.html
smart.notifications/: .gitignore  email.html  email_body_generator.py  info.py  run.py  vima_smartcheck.py
smart_emails/: __main__.py  cli.py  constants.py  drive_attribute_provider.py  drive_info_provider.py  email_body_generator.py  email_sender.py  vima_smartcheck.py
smart_emails/domain/: attribute.py  drive_info.py
smart_emails/foundation.emails/: .gitignore  package-lock.json  package.json
smart_emails/foundation.emails/src/assets/scss/: app.scss
smart_emails/foundation.emails/src/pages/: smart-notification-example.html  smart-notification-template.html  smart-notification_sda_20_08_2018.html
smart_emails/helpers/: commandRunner.py  configAccessor.py
smart_emails/html/: smart-notification-example.html  smart-notification-template.html
tests/: fixtures.py  test_drive_info_provider.py
